fixed order confirmation modal not being scrollable if in overflows ints container

--- a/src/components/order-confirmation-modal/order-confirmation-modal.css
+++ b/src/components/order-confirmation-modal/order-confirmation-modal.css
@@ -1,14 +1,21 @@
 .order-confirmation-modal {
     width: 100%;
+    max-height: 95%;
+    padding: 40px 24px;
     position: fixed;
-    top: 50%;
+    top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: var(--white);
-    padding: 40px 24px;
     z-index: 1000;
+    overflow-y: auto;
+    background-color: var(--white);
     border-radius: 12px;
 }
+
+.order-confirmation-modal::-webkit-scrollbar {
+    display: none;
+  }
+
 
 @media screen and (min-width: 768px) {
     .order-confirmation-modal {
@@ -24,11 +31,15 @@
 }
 
 .overlay {
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.50);
     z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-y: hidden;
+    background: rgba(0, 0, 0, 0.50);
 }
